[project]
name = "cell-diffusion"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "diffusers>=0.33.1",
    "matplotlib>=3.10.1",
    "scanpy>=1.11.1",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]
